# iceberg-rust

./: Cargo.toml
api/iceberg_playground/: struct.IcebergCatalogList.html
bindings/python/src/: datafusion_table_provider.rs
crates/catalog/glue/: Cargo.toml
crates/catalog/glue/src/: catalog.rs
crates/catalog/glue/tests/: glue_catalog_test.rs
crates/catalog/hms/: Cargo.toml
crates/catalog/hms/src/: catalog.rs
crates/catalog/hms/tests/: hms_catalog_test.rs
crates/catalog/rest/: Cargo.toml
crates/catalog/rest/src/: catalog.rs
crates/catalog/s3tables/: Cargo.toml
crates/catalog/s3tables/src/: catalog.rs
crates/catalog/sql/: Cargo.toml
crates/catalog/sql/src/: catalog.rs
crates/examples/: Cargo.toml
crates/examples/src/: oss_backend.rs
crates/iceberg/: Cargo.toml
crates/iceberg/src/: error.rs  lib.rs  table.rs  test_utils.rs
crates/iceberg/src/arrow/: caching_delete_file_loader.rs  delete_file_loader.rs  delete_filter.rs  reader.rs
crates/iceberg/src/catalog/: mod.rs
crates/iceberg/src/catalog/memory/: catalog.rs
crates/iceberg/src/io/: file_io.rs  local_fs.rs  memory.rs  mod.rs  object_cache.rs  storage.rs  storage_config.rs  storage_s3.rs
crates/iceberg/src/io/config/: azdls.rs  gcs.rs  mod.rs  oss.rs  s3.rs
crates/iceberg/src/puffin/: metadata.rs  test_utils.rs  writer.rs
crates/iceberg/src/scan/: mod.rs
crates/iceberg/src/spec/: manifest_list.rs  table_metadata.rs  table_metadata_builder.rs
crates/iceberg/src/spec/manifest/: mod.rs  writer.rs
crates/iceberg/src/transaction/: mod.rs
crates/iceberg/src/writer/: mod.rs
crates/iceberg/src/writer/base_writer/: data_file_writer.rs  equality_delete_writer.rs
crates/iceberg/src/writer/file_writer/: parquet_writer.rs  rolling_writer.rs
crates/iceberg/src/writer/partitioning/: clustered_data_writer.rs  clustered_writer.rs  fanout_data_writer.rs  fanout_writer.rs  mod.rs  unpartitioned_writer.rs
crates/iceberg/tests/: file_io_gcs_test.rs  file_io_s3_test.rs
crates/integration_tests/: Cargo.toml
crates/integration_tests/src/: lib.rs
crates/integration_tests/tests/shared_tests/: append_data_file_test.rs  append_partition_data_file_test.rs  conflict_commit_test.rs  scan_all_type.rs
crates/integrations/datafusion/src/: task_writer.rs
crates/integrations/datafusion/src/physical_plan/: repartition.rs  write.rs
crates/integrations/datafusion/src/table/: mod.rs  table_provider_factory.rs
crates/storage/opendal/: Cargo.toml
crates/storage/opendal/src/: lib.rs  storage.rs  storage_azdls.rs  storage_fs.rs  storage_gcs.rs  storage_oss.rs  storage_s3.rs
crates/storage/utils/: Cargo.toml
crates/storage/utils/src/: lib.rs
docs/rfcs/: 0002_storage_trait.md  0003_runtime_trait.md
