# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "iceberg-storage-opendal"
edition = { workspace = true }
homepage = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

categories = ["database"]
description = "Apache Iceberg OpenDAL storage implementation"
keywords = ["iceberg", "storage", "opendal"]
license = { workspace = true }
repository = { workspace = true }

[features]
default = ["storage-fs", "storage-s3"]
storage-all = ["storage-fs", "storage-s3", "storage-gcs", "storage-oss", "storage-azdls"]

storage-azdls = ["opendal/services-azdls"]
storage-fs = ["opendal/services-fs"]
storage-gcs = ["opendal/services-gcs"]
storage-oss = ["opendal/services-oss"]
storage-s3 = ["opendal/services-s3", "reqsign"]

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
iceberg = { workspace = true }
opendal = { workspace = true }
reqsign = { version = "0.16.3", optional = true, default-features = false }
reqwest = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
typetag = { workspace = true }
url = { workspace = true }

[dev-dependencies]
futures = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
