# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "iceberg-storage-utils"
edition = { workspace = true }
homepage = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

categories = ["database"]
description = "Apache Iceberg storage utilities and default factory"
keywords = ["iceberg", "storage", "utils"]
license = { workspace = true }
repository = { workspace = true }

[features]
default = ["opendal"]
opendal = ["dep:iceberg-storage-opendal"]
# Future: object-store = ["dep:iceberg-storage-object-store"]

[dependencies]
iceberg = { workspace = true }
iceberg-storage-opendal = { workspace = true, optional = true }
serde = { workspace = true }
serde_derive = { workspace = true }
typetag = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
