# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "iceberg-storage"
edition = { workspace = true }
homepage = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

categories = ["database"]
description = "Apache Iceberg storage with default factory"
keywords = ["iceberg", "storage"]
license = { workspace = true }
repository = { workspace = true }

[features]
default = ["storage-s3"]
storage-all = ["storage-fs", "storage-s3", "storage-gcs", "storage-oss", "storage-azdls"]

storage-azdls = ["dep:iceberg-storage-opendal", "iceberg-storage-opendal?/storage-azdls"]
storage-fs = ["dep:iceberg-storage-opendal", "iceberg-storage-opendal?/storage-fs"]
storage-gcs = ["dep:iceberg-storage-opendal", "iceberg-storage-opendal?/storage-gcs"]
storage-oss = ["dep:iceberg-storage-opendal", "iceberg-storage-opendal?/storage-oss"]
storage-s3 = ["dep:iceberg-storage-opendal", "iceberg-storage-opendal?/storage-s3"]

[dependencies]
iceberg = { workspace = true }
iceberg-storage-opendal = { workspace = true, optional = true }
serde = { workspace = true }
serde_derive = { workspace = true }
typetag = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
